# ViewAndCompress

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: FindQt.cmake  InstallConfig.cmake  ProjectConfig.cmake  SetEnv.cmake  Uninstall.cmake.in
tests/: CMakeLists.txt
tests/ProcessActionMocks/: CMakeLists.txt  ProcessActionMocks.cpp
tests/TestProcessModel/: CMakeLists.txt  TestProcessModel.cpp
view_and_compress/: CMakeLists.txt  main.cpp
view_and_compress/controller/: ControllerImpl.cpp  ControllerImpl.h
view_and_compress/draco_implementation/: DracoCompressAction.cpp  DracoCompressAction.h  DracoDecompressAction.cpp  DracoDecompressAction.h  DracoProcessFactory.cpp  DracoProcessFactory.h  DracoProcessImpl.cpp  DracoProcessImpl.h  DracoProcessTypeImpl.cpp  DracoProcessTypeImpl.h
view_and_compress/gui/: Viewer3D.cpp  Viewer3D.h  ViewerImpl.cpp  ViewerImpl.h  ViewerImpl.ui
view_and_compress/interfaces/: IController.h  IProcess.h  IProcessAction.h  IProcessFactory.h  IProcessType.h  IViewer.h
